# mopytui

./: CLAUDE.md  Cargo.toml  README.md  mopidy.conf
.github/workflows/: release.yml
packaging/aur/mopytui-bin/: PKGBUILD
packaging/aur/mopytui-git/: PKGBUILD
src/: app.rs  audio.rs  cmd.rs  config.rs  events.rs  fanart.rs  images.rs  input.rs  lyrics.rs  main.rs  mpris.rs
src/metadata/: aggregator.rs  cache.rs  mod.rs  musicbrainz.rs  wikipedia.rs
src/mopidy/: client.rs  mod.rs  models.rs  mpd_idle.rs
src/ui/: albums.rs  chips.rs  header.rs  help.rs  info.rs  library.rs  mod.rs  now_playing.rs  playlists.rs  progress.rs  queue.rs  search.rs  spectrum.rs  stats.rs  status.rs  theme.rs
