[package]
name = "mopytui"
version = "0.1.0"
edition = "2024"
description = "A full-featured TUI client for Mopidy with cover art rendering"
license = "MIT"

[[bin]]
name = "mopytui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
tui-big-text = "0.8"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "hickory-dns"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }

toml = "0.8"
directories = "5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

anyhow = "1"
thiserror = "2"
base64 = "0.22"
unicode-width = "0.2"
rustfft = "6"

[features]
default = []
# Enable better halfblocks rendering on terminals without Kitty/iTerm2/Sixel
# Requires libchafa: `brew install chafa` on macOS / `apt install libchafa-dev` on Linux
chafa = ["ratatui-image/chafa-dyn"]

[profile.release]
lto = true
codegen-units = 1
strip = true
